@@ -1,4 +1,5 @@
 --- Version 0.5.6 - May-XX-2011
+- Fixed: Potential crash when creating plots from a tcl/tk based GUI
 - Fix compilation on FreeBSD
 - Replace the R console's "Copy selection cleaned" action with "Copy commands, only", which will omit any non-command regions in the copy
 - Add "Copy lines to output" action to copy highlighted lines from the R console or script editors to the output window
@@ -13,7 +14,7 @@
 - Added convenience R function rk.list() to allow simplification of plugin code
 - Added stack-based window switching using Ctrl+(Shift)+Tab; this replaces the old "Next Window" and "Previous Window" actions
 - Fixed: Graphics device windows would disappear when trying to attach them to the main window with some versions of Qt
-- Fixed: tcl/tk widgets would locki up after running commands in the R Console
+- Fixed: tcl/tk widgets would lock up after running commands in the R Console
 - Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
 - When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
 - Include the sidebar position of tool windows when saving / restoring the workplace layout
